--- a/Volcker_Cites.Rmd
+++ b/Volcker_Cites.Rmd
@@ -12,10 +12,16 @@ library(xml2)
 library(dplyr)
 library(purrr)
 library(kableExtra)
+library(qdap)
 ```
 
 ## Purpose 
 
+This project analyzes who the Federal Reserve is citing in the Volcker Rule. 
+
+```{r note, eval=FALSE, cache=FALSE, echo=FALSE}
+https://pages.github.com/
+```
 ## Data
 
 This data is from <https://www.federalregister.gov/documents/full_text/xml/2014/01/31/2013-31511.xml>
@@ -130,7 +136,6 @@ ifelse(total_length_string_after_first_paren > 30, 1, 0)
 comments_on_comments = ifelse(qdap::word_count(substr(x = txt,start = 1, stop = first_paren-1))> 10, 0, comments_on_comments)
 comments_on_comments
 # idea where you get rid of EVERYTHING
-
 ```
 
 ## Who Comments?
