added detail to html

--- a/Volcker_Cites.Rmd
+++ b/Volcker_Cites.Rmd
@@ -50,7 +50,7 @@ The footnotes are stored in the XML on the Federal Register API.^[<https://www.f
 3. `r all_footnotes[500]`
   + "The statute specifically permits banking entities to continue to provide these beneficial services to their clients, customers, and counterparties."
 
-For this project we are interested in the first two types, since they directly cite commenters. Since citations just mentining a commenter name and citatoins discussing the content of the commenter's comment are different, I separate these two types of comments in the analysis below.  I define detailed comments as comments followed by parenthesis with over 30 characters.   
+For this project we are interested in the first two types, since they directly cite commenters. Since citations just mentining a commenter name and citatoins discussing the content of the commenter's comment are different, I separate these two types of comments in the analysis below.  I define detailed comments as comments followed by parenthesis with over 30 characters and long detailed comments as those with over 100.   
 
 Note, however, that since the XML does not separate commenters consistently, there are a number of text blocks with one citation that should not be on this list because they are not citations but are blocks of text with the same formatting as citations (see [the section on limits](#limits-of-this-approach) for a more detailed explanation).  Expanding this approach to use on other joint SEC/Federal Reserve rules would require the help of research assistants as, unlike most SEC rules, there is no dictionary that maps abbreviations to commenters.  See, for example the following citation from the SEC's Conflict Minerals rule which regulates the use of minerals from the Democratic Republic of Congo, among other places:
 
