--- a/Volcker_Cites.Rmd
+++ b/Volcker_Cites.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Citations in the Volcker Rule"
 author: "Steven Rashin"
-date: "9/14/2020"
+date: "`r format(Sys.time(), '%B %d, %Y')`"
 output: html_document
 ---
 
